# oxlens-sdk-core

./: .gitignore  Cargo.toml  README.md  RX_TX_PIPELINE_DESIGN.md
.cargo/: config.toml
claude/: SESSION_CONTEXT_20260311_2.md  SESSION_CONTEXT_20260311_bench_e2e.md  SESSION_CONTEXT_20260312_arc_handle_android.md  SESSION_CONTEXT_20260312_v2.md  SESSION_CONTEXT_20260314_cross_build.md  SESSION_CONTEXT_20260314_demo_ui.md  SESSION_CONTEXT_20260314_kotlin.md  SESSION_CONTEXT_20260314_libwebrtc.md  SESSION_CONTEXT_20260314_mute_video.md  SESSION_CONTEXT_20260314_settings.md  SESSION_CONTEXT_20260314_subscribe_fix.md  SESSION_CONTEXT_20260314_telemetry.md  SESSION_CONTEXT_20260315.md  SESSION_CONTEXT_20260315_compose.md  SESSION_CONTEXT_20260315_kotlin.md  SESSION_CONTEXT_20260315_libwebrtc.md  SESSION_CONTEXT_20260315_server_diagnostics.md  SESSION_CONTEXT_20260315_ui_surfaceview.md  SESSION_INDEX.md
crates/oxlens-bench/: Cargo.toml
crates/oxlens-bench/src/: main.rs
crates/oxlens-core/: Cargo.toml
crates/oxlens-core/src/: client.rs  lib.rs
crates/oxlens-core/src/sdp/: builder.rs  mod.rs  types.rs  validate.rs
crates/oxlens-core/src/signaling/: client.rs  message.rs  mod.rs  opcode.rs
crates/oxlens-jni/: Cargo.toml  DEPRECATED.md  build.rs
crates/oxlens-jni/c/: lse_init.c
crates/oxlens-jni/src/: callback.rs  client.rs  lib.rs
crates/oxlens-webrtc/: Cargo.toml  DEPRECATED.md
crates/oxlens-webrtc-sys/: Cargo.toml  DEPRECATED.md
crates/oxlens-webrtc-sys/src/: lib.rs
crates/oxlens-webrtc/src/: lib.rs  session.rs
doc/: CAUTIONS.md  DEV_ENVIRONMENT_SETUP.md  LIBWEBRTC_BUILD.md  PTT_AUDIO_DELAY_RESOLUTION.md  RX_TX_PIPELINE_DESIGN.md  SERVER_CONFIG_SCHEMA.md  SESSION_CONTEXT_20260309_v2.md  SESSION_CONTEXT_20260312.md  SESSION_CONTEXT_20260315.md  SKILL_OXLENS.md  oxlens-commits-20260314_1.txt  oxlens-patch-20260314_1.diff  기술문서_RTP파이프라인제어-20260308.md
platform/android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
platform/android/demo-app/: build.gradle.kts
platform/android/demo-app/src/main/: AndroidManifest.xml
platform/android/demo-app/src/main/java/com/oxlens/demo/: DemoViewModel.kt  MainActivity.kt
platform/android/demo-app/src/main/java/com/oxlens/demo/ui/: OxLensScreen.kt  WebRtcSurface.kt
platform/android/demo-app/src/main/java/com/oxlens/demo/ui/theme/: Color.kt  Theme.kt
platform/android/demo-app/src/main/res/drawable/: badge_bg.xml  badge_cyan_bg.xml  badge_green_bg.xml  badge_talk_bg.xml  circle_btn_bg.xml  circle_btn_red.xml  ic_camera_switch.xml  ic_hand_tap.xml  ic_hangup.xml  ic_mic.xml  ic_mic_off.xml  ic_ph_camera_rotate.xml  ic_ph_lock.xml  ic_ph_lock_open.xml  ic_ph_megaphone.xml  ic_ph_mic.xml  ic_ph_mic_off.xml  ic_ph_power.xml  ic_ph_settings.xml  ic_ph_sign_in.xml  ic_ph_sign_out.xml  ic_ph_speaker.xml  ic_ph_speaker_off.xml  ic_ph_video.xml  ic_ph_video_off.xml  ic_power.xml  ic_video.xml  ic_video_off.xml  mode_btn_bg.xml  name_label_bg.xml  panel_bg.xml  pip_bg.xml  tile_bg.xml  zone_bg.xml
platform/android/demo-app/src/main/res/layout/: activity_main.xml
platform/android/demo-app/src/main/res/values/: colors.xml  strings.xml  themes.xml
platform/android/demo-app/src/main/res/xml/: network_security_config.xml
platform/android/oxlens-sdk/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
platform/android/oxlens-sdk/src/main/: AndroidManifest.xml
platform/android/oxlens-sdk/src/main/java/com/oxlens/sdk/: Constants.kt  OxLensClient.kt  OxLensEventListener.kt
platform/android/oxlens-sdk/src/main/java/com/oxlens/sdk/device/: AudioDeviceManager.kt
platform/android/oxlens-sdk/src/main/java/com/oxlens/sdk/media/: MediaSession.kt  SdpBuilder.kt  SdpTypes.kt
platform/android/oxlens-sdk/src/main/java/com/oxlens/sdk/ptt/: FloorFsm.kt
platform/android/oxlens-sdk/src/main/java/com/oxlens/sdk/signaling/: Message.kt  Opcode.kt  SignalClient.kt
platform/android/oxlens-sdk/src/main/java/com/oxlens/sdk/telemetry/: Telemetry.kt
scripts/: build-android.sh
