[package]
name = "oxlens-core"
description = "PTT business logic — Floor FSM, WS signaling, MBCP, media gating"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
oxlens-webrtc = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
