[package]
name = "oxlens-webrtc-sys"
description = "C++ FFI layer — webrtc-sys fork with NetEQ bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
webrtc-sys = { workspace = true }
cxx = { workspace = true }

tracing = { workspace = true }
